# deep-learning-framework-needle

./: CMakeLists.txt  Makefile  README.md  tf-计算图.ipynb
.ipynb_checkpoints/: tf-计算图-checkpoint.ipynb
apps/: models.py  simple_training.py
graphs1/: events.out.tfevents.1679582870.xuweijia-2070S
graphs2/: events.out.tfevents.1679582874.xuweijia-2070S
python/: setup.py
python/needle/: __init__.py  autograd.py  data.py  init.py  nn.py  ops.py  optim.py
python/needle/backend_ndarray/: .fuse_hidden00006bf500000001  __init__.py  ndarray.py
src/: ndarray_backend_cpu-new.cc  ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
tests/: test_cifar_ptb_data.py  test_conv.py  test_nd_backend.py  test_sequence_models.py
